# contactopensource-with-rust-diesel-postgresql

./: .env  .gitignore  .gitinit  CONTRIBUTING.md  Cargo.toml  README.md
db/examples/: arcs.sql  codes.sql  contacts.sql  email_contacts.sql  events.sql  geo_codes.sql  geo_points.sql  items.sql  link_contacts.sql  locales.sql  media_types.sql  orgs.sql  passport_contacts.sql  person_names.sql  person_pronouns.sql  persons.sql  places.sql  postal_contacts.sql  tags.sql  telephone_contacts.sql  things.sql
db/migrations/10000000000000_create_items/: up.sql
db/migrations/10000000000001_create_arcs/: down.sql  up.sql
db/migrations/10000000000002_create_orgs/: up.sql
db/migrations/10000000000003_create_persons/: down.sql  up.sql
db/migrations/10000000000005_create_places/: down.sql  up.sql
db/migrations/10000000000006_create_things/: up.sql
db/migrations/10000000000007_create_events/: up.sql
db/migrations/10000000000008_create_link_contacts/: down.sql  up.sql
db/migrations/10000000000009_create_email_contacts/: down.sql  up.sql
db/migrations/10000000000010_create_telephone_contacts/: down.sql  up.sql
db/migrations/10000000000011_create_postal_contacts/: down.sql  up.sql
db/migrations/10000000000012_create_passport_contacts/: down.sql  up.sql
db/migrations/10000000000013_create_contacts/: up.sql
db/migrations/10000000000014_create_tags/: up.sql
db/migrations/10000000000015_create_codes/: down.sql  up.sql
db/migrations/10000000000016_create_locales/: up.sql
db/migrations/10000000000017_create_media_types/: down.sql  up.sql
db/migrations/10000000000018_create_geo_points/: down.sql  up.sql
db/migrations/10000000000019_create_geo_codes/: down.sql  up.sql
db/migrations/10000000000020_create_person_names/: down.sql  up.sql
db/migrations/10000000000021_create_person_pronouns/: down.sql  up.sql
db/setups/0000000000000000_create_database/: down.sql  up.sql
db/setups/0000000000000001_create_roles/: down.sql  up.sql
db/setups/0000000000000002_create_privileges/: down.sql  up.sql
doc/uml/tables/: tables.plantuml
src/: lib.rs  schema.rs  schema.sh
src/enums/: 00_README.md  action_enum.rs  model_enum.rs  output_format_enum.rs  table_enum.rs
src/helpers/: zid.rs
src/helpers/fab/: big_decimal.rs  chrono.rs  uuid.rs
src/helpers/parse/: a.rs  big_decimal.rs  chrono.rs  serde_json.rs  uuid.rs
src/macros/: crud.rs  db_crud.rs
src/models/arc/: arc.rs  as_serde_json_value.rs  as_sql_insert.rs  clap.rs  crud.rs  db_crud.rs  fab.rs
src/models/code/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  code.rs  fab.rs
src/models/contact/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  contact.rs  fab.rs
src/models/email_contact/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  email_contact.rs  fab.rs
src/models/event/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  event.rs  fab.rs
src/models/geo_code/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  geo_code.rs
src/models/geo_point/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  geo_point.rs
src/models/item/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  crud.rs  db_crud.rs  fab.rs  item.rs
src/models/link_contact/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  link_contact.rs
src/models/locale/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  locale.rs
src/models/media_type/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  media_type.rs
src/models/org/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  org.rs
src/models/passport_contact/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  passport_contact.rs
src/models/person/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  person.rs
src/models/person_name/: as_serde_json_value.rs  as_sql_insert.rs  clap.rs  fab.rs  person_name.rs
src/models/person_pronoun/: as_sql_insert.rs  (+4 more)
src/traits/: 00_README.md  as_serde_json_value.rs  as_sql_insert.rs  clap_able.rs  crud_able.rs  db_crud.rs  fab_able.rs  type_contains.rs
src/types/: 00_README.md  alpha_word.rs  altitude.rs  amperes.rs  animal_word.rs  app_parse_error.rs  candelas.rs  color_hex_upper_string.rs  count.rs  country_text.rs  css_class_name.rs  currency_code.rs  currency_name.rs  currency_symbol.rs  date.rs  db_column_name.rs  db_database_name.rs  db_row_id.rs  db_schema_name.rs  db_table_name.rs  dependent_possessive_pronoun.rs  disjunctive_pronoun.rs  domain_name.rs  elevation.rs  email_addr_spec.rs  email_address.rs  email_display_name.rs  event_name.rs  field_name.rs  fruit_word.rs  geo_code_text.rs  global_location_number_text.rs  grams.rs  hex_upper_string.rs  host_name.rs  html_string.rs  id.rs  independent_possessive_pronoun.rs  intensive_pronoun.rs  isic_v4_code.rs  (+91 more)
tests/: database_with_diesel.rs  integration_with_clap.rs
(+26 files in other folders)
